# chip8-emulator

./: .gitignore  readme.md
chip8_core/: Cargo.toml  readme.md
chip8_core/src/: lib.rs
desktop/: Cargo.toml  readme.md
desktop/src/: main.rs
games/: readme.md
wasm/: .gitignore  Cargo.toml  readme.md
wasm/src/: input.rs  lib.rs
wasm/web/: index.html  index.js
